fdo#76589 : FILESAVE: DOCX: Numbered list is not preserved after RT

Issue :
	Numbered list without suffix does not get preserved after
	Roudtrip.

	Description :
	- For level zero LO was writing w:lvlText with epmty value.
	- This was because in DocxAttributeOutput::NumberingLevel()
	  check was based on empty NumberingString.
	- But for "deciaml" also rNumberingString appears to be empty
	  for level-0

	Implementation :
	- Added check to write empty value for w:lvlText only if
	  NumberingType is "bullet" with level-0.
	- This will not write empty w:lvlText with level-0 and
	  NumberingType as "decimal".

Reviewed on:
	https://gerrit.libreoffice.org/8768

Change-Id: Ic6ece45e0122da05013beac93a6e11fac926514d